# gng_collection

./: .gitignore  CLAUDE.md  README.md
algorithms/: README.md
algorithms/_template/python/: model.py
algorithms/ais_gng/cpp/: ais_gng.hpp  ais_gng_am.hpp  ais_gng_roman.hpp
algorithms/ais_gng/python/: model.py  model_am.py  model_roman.py
algorithms/ais_gng_dt/cpp/: ais_gng_dt.hpp
algorithms/ais_gng_dt/python/: model.py
algorithms/dd_gng/cpp/: dd_gng.hpp
algorithms/dd_gng/python/: __init__.py  model.py
algorithms/gcs/cpp/: gcs.hpp  gcs_kubota.hpp
algorithms/gcs/python/: model.py  model_kubota.py
algorithms/gng/: REFERENCE.md
algorithms/gng/cpp/: CMakeLists.txt  gng.hpp  gng_kubota.hpp
algorithms/gng/cpp/tests/: test_gng.cpp
algorithms/gng/python/: __init__.py  model.py  model_kubota.py
algorithms/gng_d/python/: model.py
algorithms/gng_dt/: REFERENCE.md
algorithms/gng_dt/cpp/: gng_dt.hpp  gng_dt_robot.hpp
algorithms/gng_dt/python/: model.py  model_robot.py
algorithms/gng_efficient/cpp/: gng_efficient.hpp
algorithms/gng_efficient/python/: __init__.py  lazy_heap.py  model.py  uniform_grid.py
algorithms/gng_t/cpp/: gng_t.hpp  gng_t_kubota.hpp
cpp/: CMakeLists.txt
cpp/include/gng/core/: base.hpp  utils.hpp
data/: README.md
data/2d/: sampler.py
data/3d/: sampler.py
experiments/: README.md
experiments/2d_visualization/: animate_gng_rotation.py  measure_all_times.py  test_aisgng_am_tracking.py  test_aisgng_am_triple_ring.py  test_aisgng_roman_tracking.py  test_aisgng_roman_triple_ring.py  test_aisgng_tracking.py  test_aisgng_triple_ring.py  test_ddgng_triple_ring.py  test_gcs_kubota_tracking.py  test_gcs_kubota_triple_ring.py  test_gcs_single_ring.py  test_gcs_tracking.py  test_gcs_triple_ring.py  test_gg_tracking.py  test_gg_triple_ring.py  test_gng_double_ring.py  test_gng_efficient_tracking.py  test_gng_efficient_triple_ring.py  test_gng_efficient_ug_only_triple_ring.py  test_gng_kubota_tracking.py  test_gng_kubota_triple_ring.py  test_gng_single_ring.py  test_gng_tracking.py  test_gng_trajectory.py  test_gng_triple_ring.py  test_gngd_tracking.py  test_gngd_triple_ring.py  test_gngt_kubota_tracking.py  test_gngt_kubota_triple_ring.py  test_gngt_tracking.py  test_gngt_triple_ring.py  test_gngu2_tracking.py  test_gngu2_triple_ring.py  test_gngu_single_ring.py  test_gngu_tracking.py  test_gngu_triple_ring.py  test_hcl_tracking.py  test_hcl_triple_ring.py  test_lbg_tracking.py  (+7 more)
experiments/2d_visualization/cpp/: CMakeLists.txt  test_aisgng_am_triple_ring.cpp  test_aisgng_roman_triple_ring.cpp  test_aisgng_triple_ring.cpp  test_gcs_kubota_triple_ring.cpp  test_gcs_triple_ring.cpp  test_gg_triple_ring.cpp  test_gng_kubota_triple_ring.cpp  test_gng_single_ring.cpp  test_gng_timing.cpp  test_gng_tracking.cpp  test_gng_triple_ring.cpp  test_gngt_kubota_triple_ring.cpp  test_gngt_triple_ring.cpp  test_gngu2_triple_ring.cpp  test_gngu_triple_ring.cpp  test_hcl_triple_ring.cpp  test_lbg_triple_ring.cpp  test_ng_triple_ring.cpp  test_som_triple_ring.cpp  visualize_am.py  visualize_results.py  visualize_triple_ring.py
experiments/3d_pointcloud/: test_aisgng_floor_wall.py  test_aisgngdt_floor_wall.py  test_contour_comparison.py  test_ddgng_auto_detect.py  test_ddgng_floor_wall.py  test_ddgng_full_features.py  test_ddgng_validation.py  test_gcs_floor_wall.py  test_gng_efficient_floor_wall.py  test_gng_floor_wall.py  test_gngd_floor_wall.py  test_gngdt_floor_wall.py  test_gngdt_robot_floor_wall.py  test_gngt_floor_wall.py  test_gngu2_floor_wall.py  test_gngu_floor_wall.py
experiments/3d_pointcloud/cpp/: CMakeLists.txt  csv_writer.hpp  sampler_3d.hpp  test_aisgng_am_floor_wall.cpp  test_aisgng_floor_wall.cpp  test_aisgng_roman_floor_wall.cpp  test_aisgngdt_floor_wall.cpp  test_gng_floor_wall.cpp  test_gngdt_floor_wall.cpp  test_gngdt_robot_floor_wall.cpp  test_gngu_floor_wall.cpp  visualize_3d_results.py
experiments/benchmarks/: benchmark_gng_efficient.py
experiments/comparison/: README.md  generate_comparison_gifs.py  generate_line_graphs.py  utility_tracking_comparison.py
experiments/dd_gng_validation/: README.md  run_all.py  test_auto_detection.py  test_density.py  test_ladder.py  test_strength.py
experiments/debug/: test_lazy_error_equivalence.py
experiments/gng_efficient/: README.md
experiments/gsrm_surface_reconstruction/: README.md  compare_methods.py  evaluate_multiresolution.py  test_gsrm_bunny.py  test_gsrm_sphere.py  test_gsrm_torus.py  test_gsrmf_floor_wall.py
experiments/gsrm_surface_reconstruction/cpp/: CMakeLists.txt  test_gsrm_sphere.cpp  test_gsrm_torus.cpp
experiments/polygon_filling/: README.md  polygon_utils.py  test_aisgng_minimal_cycles.py  test_aisgng_triple_ring.py  test_bfs_vs_ccw.py  test_dense_graph.py  test_dense_graph_visual.py  test_gng_triple_ring.py  test_minimal_cycles.py  test_triangle_comparison.py
notebooks/: README.md
python/: pyproject.toml  trajectory.py
python/gng/: __init__.py
python/gng/core/: __init__.py  base.py  utils.py
references/: papers.md
references/notes/: ais_gng.md  dd_gng.md  dd_gng_slam_analysis.md  demogng_reference.md  gcs.md  gng.md  gng_d.md  gng_efficient_fiser2013.md  gng_t.md  gng_u.md  gng_u2.md  gng_u_vs_gng_u2.md  growing_grid.md  hcl.md  lbg.md  neural_gas.md  som.md  variant_comparison.md
references/original_code/: README.md
references/original_code/toda_gngdt/gng_livox/: CMakeLists.txt  package.xml
references/original_code/toda_gngdt/gng_livox/config/: oic_parameter.yaml  oic_parameter119.yaml  oic_parameter128.yaml  oic_parameter130.yaml  oic_parameter168.yaml  oic_parameter_multi.yaml  parameter.yaml
references/original_code/toda_gngdt/gng_livox/launch/: gng_fujisawa_sim_launch.py  gng_launch.py  gng_livox_launch.py  gng_mid360_launch.py  gng_sim_launch.py  oic_gng_launch.py  oic_gng_multi_launch.py  oic_gng_sim_launch.py  oic_multigng_launch.py
references/original_code/toda_gngdt/gng_livox/rviz/: test.rviz
references/original_code/toda_gngdt/gng_livox/src/: gng.c  gng.h  gng_livox.cpp  icp.c  icp.h  malloc.h  parameter.h  pca.h  rnd.h
(+56 files in other folders)
